__header__([Octave News Archive], [logo])

<div class="content">

<dl>
    <dt>July 18, 2012</dt>
    <dd>
      Octave has
      been <a href="http://sophia.estec.esa.int/socis2012/?q=node/13">accepted
      into SOCIS</a>. We're now hiring for one position!
    </dd>
    <dt>July 16, 2012</dt>
    <dd>
      <a href="http://www.octave.org/wiki/OctConf_2012">OctConf
      2012</a> is currently underway.
    </dd>

    <dt>June 8, 2012</dt>
    <dd>
      <a href="http://planet.octave.org">Planet Octave</a> is up,
      which is a collection of blogs related to Octave. At the moment,
      it's principally dedicated to the blogs from students working
      under Google Summer of Code.
    </dd>
    <dt>May 31, 2012</dt>
    <dd>Version 3.6.2 has been released and is now available
      for <a href="download.html">download</a>. Octave 3.6.2 is a
      minor bug-fixing release. See
      the <a href="NEWS-3.6.html">NEWS</a> file for a list of
      user-visible changes since 3.4.
    </dd>
    <dt>April 23, 2012</dt>
    <dd>
      Octave will be participating
      in <a href="http://www.google-melange.com/gsoc/homepage/google/gsoc2012">Google
      Summer of Code 2012</a> with three students. Congratulations to
      Max Brister, Jacob Dawid, and Benjamin Lewis who will be working
      respectively on JIT compiling, finishing our native GUI, and
      least squares spectral analysis.
    </dd>
    <dt>February 22, 2012</dt>
    <dd>Version 3.6.1 has been released and is now available
      for <a href="download.html">download</a>.  Octave 3.6.1 is a
      major new release.  See the <a href="NEWS-3.6.html">NEWS</a>
      file for a list of user-visible changes.
    </dd>
<dt>February 1, 2012</dt>
<dd><a href="http://www.octave.org/wiki/OctConf_2012">OctConf
2012</a> will take place during July 16-20 2012. All Octave users and
developers invited!</dd> 
<dt>October 10, 2011</dt>
<dd>Version 3.4.3 has been released and is now available for ftp.