@@ -27,6 +27,14 @@ __nav_buttons__([home])
   <h1>News</h1>
 
   <dl>
+    <dt>August 1, 2012</dt>
+    <dd>
+      <a href="http://jordi.inversethought.com/blog/socis-2012-students/">ESA
+      approved <em>two</em> students</a> to work for Octave under the
+      SOCIS mentorship programme! Congratulations to Wendy Liu and
+      Andrius Sutas who will be working on finishing the Agora website
+      and low-level I/O respectively.
+    </dd>
     <dt>July 18, 2012</dt>
     <dd>
       Octave has
@@ -60,12 +68,6 @@ __nav_buttons__([home])
       Max Brister, Jacob Dawid, and Benjamin Lewis who will be working
       respectively on JIT compiling, finishing our native GUI, and
       least squares spectral analysis.
-    </dd>
-    <dt>February 22, 2012</dt>
-    <dd>Version 3.6.1 has been released and is now available
-      for <a href="download.html">download</a>.  Octave 3.6.1 is a
-      major new release.  See the <a href="NEWS-3.6.html">NEWS</a>
-      file for a list of user-visible changes.
     </dd>
   </dl>
 
