@@ -3,6 +3,14 @@ __header__([Octave News Archive], [logo])
 <div class="content">
 
 <dl>
+    <dt>August 1, 2012</dt>
+    <dd>
+      <a href="http://jordi.inversethought.com/blog/socis-2012-students/">ESA
+      approved <em>two</em> students</a> to work for Octave under the
+      SOCIS mentorship programme! Congratulations to Wendy Liu and
+      Andrius Sutas who will be working on finishing the Agora website
+      and low-level I/O respectively.
+    </dd>
     <dt>July 18, 2012</dt>
     <dd>
       Octave has
